# local-llm-transcriber

./: README.md  exporter.py  main.py  models.py  pyproject.toml  summarizer.py  transcriber.py
.claude/skills/build-with-agent-team/: SKILL.md
scripts/: stop-transcriber.sh  transcriber.sh
src/local_llm_transcriber/: __init__.py  app.py
