[project]
name = "local-llm-transcriber"
version = "0.1.0"
description = "Local-only audio/video transcription with AI summaries. No data leaves your machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.0",
    "faster-whisper>=1.0",
    "httpx>=0.27",
]

[project.scripts]
local-transcriber = "local_llm_transcriber.app:main"